--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <h1 class="page-title">
                 Meu Catalago de Filmes
             </h1>
-            <img src="https://cdn-icons-png.flaticon.com/512/2459/2459778.png"
-                class="page-logo" alt="">
+            <img src="https://cdn-icons-png.flaticon.com/512/2459/2459778.png" class="page-logo" alt="">
             <p class="page-subtitle">
                 Olá! Me diz, qual seu Filme favorito?
             </p>
@@ -34,7 +33,9 @@
         <a href="https://alura.com.br/" target="_blank">
             <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
         </a>
-
+        <a href="https://github.com/rickson2002" class="imagem-botao">
+            <img src="./src/img/icone-github-rouge.png" alt="Ícone do botão">
+          </a>
     </main>
 
     <script src="./src/js/index.js"></script>
